# namu-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  seed.sql
app/: database.py  main.py
app/core/: config.py
app/crud/: feedback.py  recommendation.py  user.py
app/models/: feedback.py  recommendation.py  user.py
app/routers/: recommendation.py  user.py
app/schemas/: feedback.py  recommendation.py  user.py
app/service/: llm_service.py
app/utils/: llm_parser.py  prompt_builder.py
tests/: test_users.py
